# Python-Distributed-ML-Framework

./: .gitignore  README.md  pyproject.toml  train_distributed.py
docs/: callbacks.md  configuration.md  strategies.md
examples/: train_cifar10.py  train_mnist.py
pydist_train/: __init__.py  config.py  trainer.py
pydist_train/callbacks/: __init__.py  base.py  checkpoint.py  progress.py
pydist_train/strategies/: __init__.py  base.py  ddp.py  fsdp.py
pydist_train/utils/: __init__.py  checkpointing.py  distributed.py  logging.py
tests/: conftest.py  test_callbacks.py  test_config.py  test_distributed.py  test_strategies.py  test_trainer.py
