[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydist-train"
version = "0.1.0"
description = "A simple, complete distributed training toolkit for PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hesam Mohseni", email = "hesam.mohseni@gmail.com" }]
keywords = ["pytorch", "distributed", "training", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.1"]

[project.optional-dependencies]
vision = ["torchvision>=0.16"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1"]

[project.urls]
Repository = "https://github.com/hesam-mohseni/pydist-train"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydist_train*"]

[tool.setuptools.package-data]
pydist_train = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
